Makefile and run-tests

--- a/0x04-sandpiles/Makefile
+++ b/0x04-sandpiles/Makefile
@@ -1,5 +1,3 @@
-0:
-	gcc -g -Wall -Wextra -Werror -pedantic mains/0-main.c 0-sandpiles.c -o 0-sandpiles
-1:
-	gcc -Wall -Wextra -Werror -pedantic mains/1-main.c 0-sandpiles.c -o 0-sandpiles
+%:
+	gcc -g -Wall -Wextra -Werror -pedantic mains/$@-main.c 0-sandpiles.c -o 0-sandpiles
 
