betty and output as a.out

--- a/0x04-sandpiles/Makefile
+++ b/0x04-sandpiles/Makefile
@@ -1,3 +1,6 @@
+0:
 %:
-	gcc -g -Wall -Wextra -Werror -pedantic mains/$@-main.c 0-sandpiles.c -o 0-sandpiles
+	gcc -g -Wall -Wextra -Werror -pedantic mains/$@-main.c 0-sandpiles.c
+	@betty-style *.c
+	@betty-doc *.c 1>/dev/null
 
