move file to tests

--- a/0x07-linked_list_cycle/Makefile
+++ b/0x07-linked_list_cycle/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-g -Wall -Wextra -Werror -pedantic
-SRC=*.c tests/0-main.c
+SRC=*.c tests/0-linkedlist.c tests/0-main.c
 OUT=a.out
 
 build:
